[gd_scene load_steps=31 format=2]

[ext_resource path="res://Player/Scripts/Wizard.gd" type="Script" id=1]
[ext_resource path="res://Player/Scripts/Stats.gd" type="Script" id=2]
[ext_resource path="res://Player/Sprite/fullsheet.png" type="Texture" id=3]
[ext_resource path="res://Hitbox/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Scripts/HurtBoxE.gd" type="Script" id=5]

[sub_resource type="AnimatedTexture" id=111]

[sub_resource type="CapsuleShape2D" id=107]
radius = 4.0
height = 0.0

[sub_resource type="Animation" id=115]
resource_name = "Attack"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteE:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 7, 7, 7, 6, 7, 6, 6, 6, 6, 8, 9, 10, 11, 12, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 1.7, 1.701 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "left_attack_box_on"
}, {
"args": [  ],
"method": "attack_animation_finished"
}, {
"args": [  ],
"method": "left_attack_box_off"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivotE:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivotE/HitBoxE/HitCollisionShape2DE:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=120]
resource_name = "Charge"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteE:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0, 1, 2 ]
}

[sub_resource type="Animation" id=119]
resource_name = "Death"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteE:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 28, 29, 29, 28, 28, 29, 29, 30, 30 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death_animation_finished"
} ]
}

[sub_resource type="Animation" id=116]
resource_name = "Hurt"
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteE:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 43, 42, 41, 42 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hurt_antimation_finished"
} ]
}

[sub_resource type="Animation" id=108]
resource_name = "Idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteE:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 32 ]
}

[sub_resource type="Animation" id=121]
resource_name = "QuickCast"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteE:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "cast_animation_finished"
} ]
}

[sub_resource type="Animation" id=109]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteE:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBoxPivotE/HitBoxE/HitCollisionShape2DE:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=132]
resource_name = "Repel"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteE:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 43, 44, 45, 44, 45, 44 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "cast_repel_middle"
}, {
"args": [  ],
"method": "cast_animation_finished"
} ]
}

[sub_resource type="Animation" id=110]
resource_name = "RunRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteE:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="AnimationNodeAnimation" id=122]
animation = "Charge"

[sub_resource type="AnimationNodeAnimation" id=126]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=123]
animation = "RunRight"

[sub_resource type="AnimationNodeStateMachineTransition" id=124]

[sub_resource type="AnimationNodeStateMachineTransition" id=125]

[sub_resource type="AnimationNodeStateMachineTransition" id=127]

[sub_resource type="AnimationNodeStateMachineTransition" id=128]

[sub_resource type="AnimationNodeStateMachineTransition" id=129]

[sub_resource type="AnimationNodeStateMachineTransition" id=130]

[sub_resource type="AnimationNodeStateMachine" id=113]
states/Charge/node = SubResource( 122 )
states/Charge/position = Vector2( 556.6, 126.968 )
states/Idle/node = SubResource( 126 )
states/Idle/position = Vector2( 464.6, 47 )
states/RunRight/node = SubResource( 123 )
states/RunRight/position = Vector2( 373.4, 126.2 )
transitions = [ "RunRight", "Charge", SubResource( 124 ), "Charge", "RunRight", SubResource( 125 ), "RunRight", "Idle", SubResource( 127 ), "Idle", "RunRight", SubResource( 128 ), "Idle", "Charge", SubResource( 129 ), "Charge", "Idle", SubResource( 130 ) ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=114]

[sub_resource type="CapsuleShape2D" id=117]
radius = 5.0
height = 8.112

[sub_resource type="CircleShape2D" id=118]
radius = 6.01275

[sub_resource type="RectangleShape2D" id=131]
extents = Vector2( 6.5, 11.5 )

[node name="PlayableWizard" type="KinematicBody2D"]
position = Vector2( -1, -1 )
collision_layer = 2
script = ExtResource( 1 )

[node name="SpriteE" type="Sprite" parent="."]
position = Vector2( 1, -2 )
scale = Vector2( 0.357912, 0.326316 )
z_index = 2
texture = ExtResource( 3 )
normal_map = SubResource( 111 )
hframes = 8
vframes = 6
frame = 1

[node name="CollisionShape2DE" type="CollisionShape2D" parent="."]
position = Vector2( 1, 10 )
shape = SubResource( 107 )

[node name="AnimationPlayerE" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 115 )
anims/Charge = SubResource( 120 )
anims/Death = SubResource( 119 )
anims/Hurt = SubResource( 116 )
anims/Idle = SubResource( 108 )
anims/QuickCast = SubResource( 121 )
anims/RESET = SubResource( 109 )
anims/Repel = SubResource( 132 )
anims/RunRight = SubResource( 110 )

[node name="AnimationTreeE" type="AnimationTree" parent="."]
tree_root = SubResource( 113 )
anim_player = NodePath("../AnimationPlayerE")
parameters/playback = SubResource( 114 )

[node name="HurtBoxE" type="Area2D" parent="."]
position = Vector2( 0.832001, -16.5 )
collision_layer = 32
collision_mask = 49152
monitorable = false
script = ExtResource( 5 )

[node name="HurtCollisionShape2DE" type="CollisionShape2D" parent="HurtBoxE"]
position = Vector2( 0.168, 17.356 )
shape = SubResource( 117 )

[node name="Timer" type="Timer" parent="HurtBoxE"]

[node name="HitBoxPivotE" type="Position2D" parent="."]
position = Vector2( 1, 1 )

[node name="HitBoxE" type="Area2D" parent="HitBoxPivotE"]
position = Vector2( -10, 0 )
collision_layer = 65
collision_mask = 4096

[node name="HitCollisionShape2DE" type="CollisionShape2D" parent="HitBoxPivotE/HitBoxE"]
position = Vector2( 31, -8 )
shape = SubResource( 118 )
disabled = true

[node name="HitBox2E" type="Area2D" parent="HitBoxPivotE"]
position = Vector2( -10, 0 )
collision_layer = 65
collision_mask = 4096

[node name="LHitCollisionShape2DE" type="CollisionShape2D" parent="HitBoxPivotE/HitBox2E"]
position = Vector2( -11, -8 )
shape = SubResource( 118 )
disabled = true

[node name="StatsWizard" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_layer = 6
collision_mask = 1

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1, 1 )
shape = SubResource( 131 )

[connection signal="area_entered" from="HurtBoxE" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBoxE" to="HurtBoxE" method="_on_HurtBoxE_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBoxE" to="HurtBoxE" method="_on_HurtBoxE_invincibility_started"]
[connection signal="timeout" from="HurtBoxE/Timer" to="HurtBoxE" method="_on_Timer_timeout"]
[connection signal="no_health" from="StatsWizard" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hitbox"]
